--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,7 +135,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.94.156.206;
 allow 141.94.156.54;
@@ -171,6 +170,7 @@ allow 158.220.123.219;
 allow 158.69.252.116;
 allow 159.89.124.116;
 allow 160.119.249.240;
+allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -216,6 +216,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -239,7 +240,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.29.160.218;
 allow 179.35.3.170;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -524,6 +524,7 @@ allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
+allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
@@ -921,6 +922,7 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
+allow 205.185.113.8;
 allow 205.185.114.112;
 allow 205.185.116.215;
 allow 205.185.116.34;
@@ -973,7 +975,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1266,7 +1267,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1281,6 +1281,7 @@ allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
+allow 2a02:c207:2247:3404::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1330,7 +1331,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1378,6 +1378,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1574,7 +1575,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:3f23::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1680,6 +1681,7 @@ allow 2a13:d207:0:461::1;
 allow 2c0f:6cf::1000;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1694,7 +1696,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
@@ -1705,6 +1706,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1776,11 +1778,12 @@ allow 45.84.107.76;
 allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.168.108;
+allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
+allow 46.195.137.210;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.242.141;
@@ -1800,7 +1803,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1864,7 +1866,6 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 82.153.138.17;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
