--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -213,6 +213,8 @@ deny 172.81.131.110;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
+deny 172.86.124.149;
+deny 172.86.93.36;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
@@ -652,6 +654,7 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.32.162.96;
 deny 193.36.132.21;
+deny 193.41.226.117;
 deny 193.70.80.213;
 deny 194.15.112.133;
 deny 194.15.113.118;
@@ -980,7 +983,6 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1041,6 +1043,8 @@ deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f704:6::1;
 deny 2602:f9f3:0:2::319;
+deny 2602:fa59:1:60::1;
+deny 2602:fa59:8:43::1;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1582,7 +1586,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1713,7 +1716,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1770,7 +1772,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.128;
 deny 45.84.107.17;
@@ -1792,6 +1793,7 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.195.165.96;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.250.242.141;
@@ -1819,7 +1821,6 @@ deny 5.255.111.64;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.218;
-deny 5.255.120.205;
 deny 5.255.121.71;
 deny 5.255.123.158;
 deny 5.255.123.164;
@@ -1836,7 +1837,6 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 5.35.47.98;
 deny 54.36.101.21;
 deny 54.36.209.253;
 deny 54.36.209.254;
@@ -1927,7 +1927,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.237.39;
-deny 91.229.239.28;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
