--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -213,6 +213,8 @@ set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
+set_real_ip_from 172.86.124.149;
+set_real_ip_from 172.86.93.36;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
@@ -652,6 +654,7 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
+set_real_ip_from 193.41.226.117;
 set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -980,7 +983,6 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1041,6 +1043,8 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f704:6::1;
 set_real_ip_from 2602:f9f3:0:2::319;
+set_real_ip_from 2602:fa59:1:60::1;
+set_real_ip_from 2602:fa59:8:43::1;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -1582,7 +1586,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1713,7 +1716,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1770,7 +1772,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
 set_real_ip_from 45.84.107.17;
@@ -1792,6 +1793,7 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.195.165.96;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.242.141;
@@ -1819,7 +1821,6 @@ set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.218;
-set_real_ip_from 5.255.120.205;
 set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
@@ -1836,7 +1837,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 5.35.47.98;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.209.253;
 set_real_ip_from 54.36.209.254;
@@ -1927,7 +1927,6 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.39;
-set_real_ip_from 91.229.239.28;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
